packages/jsts/tests/dbd/benchmark/TypeError/T15 X is read-only/T15-01/fixed.js

const info = {
  valueChanges: Object.freeze([1,2])
}
const state = {}

{
  value: [...info.valueChanges].reverse().find((change) => change.propertyName == state.propertyName)?.value ?? ""
}
